--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 </style>
 </head>
 <body>
-
+    
+<center>
 <h1>Responsive Web Design Demo</h1>
+</center>
 
-<div class="city">
+<div class="Links">
   <h2>London</h2>
   <p>London is the capital city of England.</p>
   <p>It is the most populous city in the United Kingdom,
@@ -28,13 +30,6 @@
   <p>Paris is the capital of France.</p> 
   <p>The Paris area is one of the largest population centers in Europe,
   with more than 12 million inhabitants.</p>
-</div>
-
-<div class="city">
-  <h2>Tokyo</h2>
-  <p>Tokyo is the capital of Japan.</p>
-  <p>It is the center of the Greater Tokyo Area,
-  and the most populous metropolitan area in the world.</p>
 </div>
 
 </body>
