--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-us">
 <head>
 <style>
-.city {
+.section {
     float: left;
     margin: 5px;
     padding: 15px;
@@ -15,14 +15,14 @@
 <h1>Responsive Web Design Demo</h1>
 </center>
 
-<div class="Links">
+<div class="section">
   <h2>London</h2>
   <p>London is the capital city of England.</p>
   <p>It is the most populous city in the United Kingdom,
   with a metropolitan area of over 13 million inhabitants.</p>
 </div>
 
-<div class="city">
+<div class="section">
   <h2>Paris</h2>
   <p>Paris is the capital of France.</p> 
   <p>The Paris area is one of the largest population centers in Europe,
