--- a/index.html
+++ b/index.html
@@ -12,22 +12,23 @@
 <body>
     
 <center>
-<h1>Responsive Web Design Demo</h1>
+<h1>Vincent Chan</h1>
 </center>
 
 <div class="section">
-  <h2>London</h2>
-  <p>London is the capital city of England.</p>
-  <p>It is the most populous city in the United Kingdom,
-  with a metropolitan area of over 13 million inhabitants.</p>
+  <h2>Under Construction :(</h2>
+  <p>Please visit my other links to learn more about me:</p>
+  <a href="github.com/degozaru">GitHub</a>
+  <a href="Linkedin.com/in/vchan94">LinkedIn</a>
 </div>
 
-<div class="section">
-  <h2>Paris</h2>
-  <p>Paris is the capital of France.</p> 
-  <p>The Paris area is one of the largest population centers in Europe,
-  with more than 12 million inhabitants.</p>
+<!--<div class="section">>
+ <h2>Paris</h2>
+ <p>Paris is the capital of France.</p> 
+ <p>The Paris area is one of the largest population centers in Europe,
+ with more than 12 million inhabitants.</p>
 </div>
+-->
 
 </body>
 </html>
