--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <div class="section">
   <h2>Under Construction :(</h2>
   <p>Please visit my other links to learn more about me:</p>
-  <a href="github.com/degozaru">GitHub</a>
-  <a href="Linkedin.com/in/vchan94">LinkedIn</a>
+  <a href="http://github.com/degozaru">GitHub</a>
+  <a href="http://Linkedin.com/in/vchan94">LinkedIn</a>
 </div>
 
 <!--<div class="section">>
