--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <p>Please visit my other links to learn more about me:</p>
   <a href="http://github.com/degozaru">GitHub</a>
   <a href="http://Linkedin.com/in/vchan94">LinkedIn</a>
+  <a href="./VchanResume.pdf">Resume</a>
 </div>
 
 <!--<div class="section">>
